--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ a:hover {
 }
 
 .texture-paper::before {
-    background: url("img/texture-paper.webp");
+    background: url("img/texture-paper.png");
     background-size: 280px 280px;
 }
 
@@ -133,7 +133,7 @@ a:hover {
 .d-bloc h5 a,
 .d-bloc h6 a,
 .d-bloc p a {
-    color: rgba(255, 255, 255);
+    color: rgba(255, 255, 255, .6);
 }
 
 .d-bloc .a-btn:hover,
@@ -150,8 +150,7 @@ a:hover {
 .d-bloc h5 a:hover,
 .d-bloc h6 a:hover,
 .d-bloc p a:hover {
-    color: black;
-    opacity: 0.8;
+    color: rgba(255, 255, 255, 1);
 }
 
 .d-bloc .navbar-toggle .icon-bar {
@@ -196,7 +195,7 @@ a:hover {
 
 .d-bloc .panel,
 .l-bloc {
-    color: rgba(0, 0, 0, 1);
+    color: rgba(0, 0, 0, .5);
 }
 
 .d-bloc .panel button:hover,
@@ -232,7 +231,7 @@ a:hover {
 .l-bloc h5 a,
 .l-bloc h6 a,
 .l-bloc p a {
-    color: black;
+    color: rgba(0, 0, 0, .6);
 }
 
 .d-bloc .panel .a-btn:hover,
@@ -573,13 +572,10 @@ a[data-lightbox]:hover img {
 }
 
 #lightbox-modal .modal-dialog img {
-    height: 50vh;
-    width: 50vh;
+    max-height: 90vh;
     margin: 0 auto;
 }
-.padding-Time{ 
-    padding: 10px 30px;
-}
+
 .lightbox-caption {
     padding: 20px;
     color: #FFF;
@@ -655,7 +651,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: black;
+    color: #575757!important;
 }
 
 .container {
@@ -663,7 +659,7 @@ a {
 }
 
 .hero-bloc-text {
-    font-size: 48px;
+    font-size: 38px;
 }
 
 .hero-bloc-text-sub {
@@ -681,13 +677,9 @@ a {
 }
 
 p {
-    font-size: 17px;
+    font-size: 11px;
 }
 
-.taille-Time{ 
-    font-size: 23px;
-    margin-bottom: 31px;
-}
 .tight-width-whitespace {
     max-width: 600px;
     margin: auto auto auto auto;
@@ -699,20 +691,15 @@ p {
 }
 
 .cta-hero {
-   /* margin-top: 22px;*/
+    margin-top: 22px;
     color: #FFFFFF!important;
     text-transform: uppercase;
     padding: 12px 28px 12px 28px;
     font-size: 16px;
     font-weight: 700;
 }
-.cta-hero-pr-btn-contact{ 
-    text-transform: uppercase;
-    padding: 12px 28px 12px 28px;
-    font-size: 16px;
-    font-weight: 700;
-}
-.twit,.fb,.db,.inst{
+
+.social {
     max-width: 400px;
     margin: auto auto auto auto;
 }
@@ -720,18 +707,6 @@ p {
 h2 {
     font-size: 22px;
     line-height: 1.4em;
-    color: #606060;
-}
-.blockquote-color{ 
-    color: #606060;
-}
-.sousligne{ 
-    border: 1px solid black;
-    width: 100%;
-    margin-top: 30px;
-}
-.margin-Time{ 
-    margin-bottom: 30px;
 }
 
 h3 {
@@ -740,13 +715,7 @@ h3 {
     font-weight: 700;
     color: #333333!important;
 }
-h4{ 
-    font-size: 24px;
-    line-height: 53px;
-    text-transform: uppercase;
-    font-weight: 700;
-    color: #333333!important;
-}
+
 .med-width-whitespace {
     max-width: 800px;
     margin: auto auto auto auto;
@@ -754,14 +723,9 @@ h4{
 }
 
 h1 {
-    color: black;
+    color: #333333!important;
 }
-.weight{
-    font-weight: bolder;
-}
-.text-size{ 
-    font-size: 22px;
-}
+
 h4 {
     color: #333333!important;
 }
@@ -774,9 +738,7 @@ h4 {
 .white {
     color: #FFFFFF!important;
 }
-.black{ 
-    color: black;
-}
+
 .portfolio-thumb {
     margin-bottom: 24px;
 }
@@ -787,17 +749,14 @@ h4 {
 }
 
 .avatar {
-    box-shadow: 0px 4px 9px rgba(0, 0, 0, 1);
+    box-shadow: 0px 4px 9px rgba(0, 0, 0, 0.3);
 }
 
 .black-background {
-    background-color: black;
-    opacity: 0.85;
+    background-color: rgba(165, 147, 99, 0.7);
     padding: 40px 40px 40px 40px;
 }
-.marge-Time{ 
-    margin-bottom: 0px;
-}
+
 .bold-link {
     font-weight: 900;
     text-decoration: underline!important;
@@ -821,11 +780,9 @@ h4 {
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: black;
+    color: #FFFFFF!important;
 }
-.opacity-Time{ 
-    opacity: 1;
-}
+
 .btn-atomic-tangerine:hover {
     background: #c27956!important;
     color: #FFFFFF!important;
@@ -853,19 +810,19 @@ h4 {
 }
 
 .bg-dots-bg {
-    background-image: url("img/dots-bg.webp");
+    background-image: url("img/dots-bg.png");
 }
 
 .bg-lines-h2-bg {
-    background-image: url("img/lines-h2-bg.webp");
+    background-image: url("img/lines-h2-bg.png");
 }
 
 .bg-banniere {
-    background-image: url("img/la-chouette-agence-banniere-compressed (1).webp");
+    background-image: url("img/la-chouette-agence-banniere.jpg");
 }
 
 .bg-presentation {
-    background-image: url("img/image-de-presentation.webp");
+    background-image: url("img/image-de-presentation.bmp");
 }
 
 @media (max-width: 1024px) {
@@ -891,13 +848,13 @@ h4 {
     }
 }
 
-@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
     .b-parallax {
         background-attachment: scroll;
     }
 }
 
-@media only screen and (min-width: 1024px) and (max-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
+@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
     .b-parallax {
         background-attachment: scroll;
     }
@@ -915,7 +872,10 @@ h4 {
         overflow-x: hidden;
         position: relative;
     }
-
+    .bloc {
+        padding-left: constant(safe-area-inset-left);
+        padding-right: constant(safe-area-inset-right);
+    }
     .bloc-group,
     .bloc-group .bloc {
         display: block;
@@ -924,6 +884,8 @@ h4 {
     .bloc-fill-screen .fill-bloc-top-edge,
     .bloc-fill-screen .fill-bloc-bottom-edge {
         padding: 0 20px;
+        padding-left: constant(safe-area-inset-left);
+        padding-right: constant(safe-area-inset-right);
     }
 }
 
